--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -107,6 +107,7 @@
 
   .catalog__button {
     width: 169px;
+    margin-top: 10px;
   }
 
   .catalog__head {
@@ -121,6 +122,6 @@
   }
 
   .catalog__item-img {
-    margin-bottom: 31px;
+    margin-bottom: 29px;
   }
 }
