--- a/source/less/blocks/goods-wrapper.less
+++ b/source/less/blocks/goods-wrapper.less
@@ -3,8 +3,10 @@
   .goods-wrapper {
     position: relative;
     display: flex;
-    width: 1320px;
     padding: 0;
     justify-content: space-between;
+    width: 1300px;
+    margin: 0 auto;
+    margin-bottom: 90px;
   }
 }
