--- a/source/less/blocks/introduce.less
+++ b/source/less/blocks/introduce.less
@@ -17,7 +17,7 @@
   color: @color-back--main;
   text-align: center;
   margin: 0;
-  padding-top: 5px;
+  padding-top: 3px;
 }
 
 .introduce__container {
@@ -37,7 +37,7 @@
 
 .introduce__img {
   margin: auto;
-  margin-top: 15px;
+  margin-top: 12px;
 }
 
 @media (min-width: @tablet-width) {
@@ -96,14 +96,14 @@
 @media (min-width: @desktop-width) {
   .introduce__info {
     margin-top: 15px;
-    padding-top: 4px;
-    margin-left: 32px;
+    padding-top: 8px;
+    padding-left: 5px;
   }
 
   .introduce__button {
     position: static;
     padding-top: 15px;
-    margin-left: 45px;
+    margin-left: 0;
     margin-top: 35px;
     margin-bottom: 286px;
   }
@@ -123,13 +123,13 @@
     position: absolute;
     z-index: 6;
     order: 4;
-    left: 380px;
+    left: 375px;
     top: -23px;
   }
 
   .introduce__head {
     margin-top: 51px;
     margin-bottom: 20px;
-    margin-left: 33px;
+    padding-left: 5px;
   }
 }
