--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -25,6 +25,7 @@
   background-repeat: no-repeat;
   background-position-x: 115px;
   background-size: 25px 12px;
+  transition: all 0.5s ease;
 
   &:active {
     opacity: 0.7;
@@ -40,6 +41,8 @@
   margin-top: 16px;
   list-style-type: none;
   background-color: @color-back--text;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .program-choice__item-head {
@@ -48,14 +51,14 @@
   font-weight: normal;
   line-height: 37px;
   text-align: left;
-  margin-top: 34px;
+  margin-top: 33px;
 }
 
 .program-choice__info {
-  margin-top: 5px;
+  margin-top: 3px;
   width: 250px;
-  padding-top: 6px;
-  padding-left: 17px;
+  padding-top: 10px;
+  padding-left: 19px;
   padding-bottom: 21px;
   font-family: @font-family--arial;
   font-size: 14px;
@@ -137,8 +140,8 @@
     border: none;
     line-height: 24px;
     font-size: 16px;
-    padding-top: 21px;
-    padding-left: 51px;
+    padding-top: 23px;
+    padding-left: 53px;
   }
 
   .program-choice__item-head {
@@ -152,7 +155,7 @@
   .program-choice__get {
     line-height: 20px;
     font-size: 20px;
-    padding-left: 51px;
+    padding-left: 53px;
     margin-top: 35px;
     margin-bottom: 98px;
     background-position-x: 182px;
@@ -193,6 +196,7 @@
     margin-top: 15px;
     margin-left: 7px;
     padding-left: 48px;
+    background-position-x: 175px;
   }
 
   .program-choice__info {
@@ -200,12 +204,12 @@
     height: 65px;
     margin: 0;
     padding-top: 0;
-    padding-left: 57px;
+    padding-left: 54px;
   }
 
   .program-choice__item:first-child {
     margin-bottom: 0;
-    margin-right: 79px;
+    margin-right: 91px;
   }
 
   .program-choice__item {
@@ -213,6 +217,7 @@
     width: 580px;
     margin-bottom: 20px;
     margin-top: 0;
+    margin-left: 0;
   }
 
   .program-choice__wrapper {
@@ -223,7 +228,7 @@
     position: relative;
     width: 100px;
     height: 100px;
-    top: 25px;
+    top: 20px;
     left: 53px;
     margin-right: 42px;
   }
@@ -231,7 +236,7 @@
   .program-choice__item-head {
     margin-left: 73px;
     margin-bottom: 75px;
-    margin-top: 51px;
+    margin-top: 49px;
   }
 
   .program-choice__item:nth-child(2) .program-choice__info {
@@ -241,7 +246,7 @@
   .program-choice__section--slim::after {
     width: 71px;
     height: 97px;
-    top: 25px;
+    top: 14px;
     right: auto;
     left: 70px;
   }
@@ -249,8 +254,8 @@
   .program-choice__section--pro::after {
     width: 134px;
     height: 57px;
-    top: 50px;
+    top: 40px;
     right: auto;
-    left: 25px;
+    left: 35px;
   }
 }
