--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -9,7 +9,7 @@
 .site-list__item {
   list-style-type: none;
   text-align: center;
-  border-top: 1px solid @color-border;
+  border-top: 1px solid @color-menu;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -44,7 +44,7 @@
     flex-direction: row;
     justify-content: space-between;
     width: 440px;
-    margin-left: 70px;
+    margin-left: 72px;
   }
 
   .site-list__link {
