--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -3,8 +3,8 @@
 @color-back--main:#ffffff;
 @color-back--opacity: rgba(255,255,255,0.3);
 @color-back--hvr: rgba(255,255,255,0.6);
-@color-back--catalog-opacity:rgba(205, 205, 205, 0.5);
-@color-back--text:#f2f2f2;
+@color-back--catalog-opacity:rgba(205, 205, 205, 0);
+@color-back--text: #f2f2f2;
 @color-back--catalog: #cdcdcd;
 @color-form--hover: #bababa;
 @color-slider: #dcdcdc;
@@ -20,6 +20,8 @@
 @color-font--arial: #444444;
 @color-border: #ededed;
 @color-html: #666666;
+@color-menu: #e6e6e6;
+@color-footer: #d9d9d9;
 @color-form--error: #ff8282;
 @font-family--arial: "Arial", sans-serif;
 @font-family--oswald: "Oswald", "Arial", sans-serif;
