--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -13,6 +13,7 @@
   background-color: @color-button;
   padding-top: 10px;
   margin: 0;
+  transition: all 0.5s ease;
 
   &:hover {
     background-color: @color-button--hvr;
