--- a/source/less/blocks/cat-addition.less
+++ b/source/less/blocks/cat-addition.less
@@ -3,6 +3,7 @@
   width: 280px;
   margin: auto;
   margin-bottom: 16px;
+  padding-top: 10px;
 }
 
 .cat-addition__wrapper {
@@ -30,7 +31,7 @@
   background-image: url("../img/icon-tick.svg");
   background-repeat: no-repeat;
   background-size: 22px 17px;
-  background-position: 2px 3px;
+  background-position: 6px 4px;
 }
 
 .cat-addition__check:hover + .cat-addition__label::before {
@@ -49,6 +50,7 @@
   .cat-addition {
     width: 780px;
     padding-left: 0;
+    padding-top: 0;
   }
 
   .cat-addition__wrapper {
@@ -66,10 +68,12 @@
   .cat-addition__label::before {
     width: 40px;
     height: 40px;
+    right: 16px;
+    bottom: -11px;
   }
 
   .cat-addition__check:checked + .cat-addition__label::before {
-    background-position: 10px 10px;
+    background-position: 7px 13px;
   }
 }
 
@@ -82,7 +86,7 @@
     width: 250px;
     padding-right: 0;
     margin-right: 0;
-    margin-top: 15px;
+    margin-top: 10px;
   }
 
   .cat-addition__wrapper {
