--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -5,7 +5,7 @@
 .footer__info {
   background-color: @color-back--text;
   padding: 0;
-  padding-top: 40px;
+  padding-top: 5px;
 }
 
 .footer__image {
@@ -62,10 +62,17 @@
 
   .footer__image {
     margin: 0;
+    margin-left: 0;
+    margin-right: 20px;
   }
 
   .footer__map {
-    width: auto;
+    width: 100%;
     height: auto;
+  }
+
+  .footer__info {
+    padding-bottom: 40px;
+    padding-top: 42px;
   }
 }
