--- a/source/less/blocks/owner-data.less
+++ b/source/less/blocks/owner-data.less
@@ -32,7 +32,7 @@
   text-transform: uppercase;
   height: 40px;
   margin-left: 12px;
-  padding-left: 10px;
+  padding-left: 12px;
   flex-grow: 1;
   width: auto;
 }
@@ -45,11 +45,19 @@
 .owner-data__icon {
   position: absolute;
   right: 15px;
-  top: 10px;
+  top: 16px;
 
   &:active {
     fill: @color-button;
   }
+}
+
+.owner-data__name:invalid + .owner-data__icon {
+  fill: @color-form--error;
+}
+
+.owner-data__name:active + .owner-data__icon {
+  fill: @color-button;
 }
 
 @media (min-width: @tablet-width) {
@@ -77,7 +85,7 @@
   }
 
   .owner-data__name--mail {
-    padding-left: 15px;
+    padding-left: 17px;
   }
 
   .owner-data__name--phone {
@@ -102,8 +110,8 @@
     margin: 0 auto;
     padding-left: 0;
     width: 1220px;
-    margin-top: 37px;
-    margin-bottom: 48px;
+    margin-top: 30px;
+    margin-bottom: 52px;
   }
 
   .owner-data__wrapper {
@@ -123,7 +131,7 @@
 
   .owner-data__phone {
     margin-top: 25px;
-    margin-left: 90px;
+    margin-left: 88px;
   }
 
   .owner-data__mail,
