--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -69,6 +69,10 @@
     margin-top: 0;
     text-align: left;
   }
+
+  .present__a {
+    margin-top: 0;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -78,13 +82,23 @@
     height: 289px;
     background-image: url("../img/gift-photo-desktop@1x.jpg");
     margin: 0;
-    right: 0;
     top: 50px;
     flex-direction: column;
+    right: 40px;
 
     @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
       background-image: url("../img/gift-photo-desktop@2x.jpg");
       background-size: 245px auto;
     }
+  }
+
+  .present::before {
+    bottom: 24px;
+    right: 0;
+  }
+
+  .present__text {
+    text-align: center;
+    margin-bottom: 23px;
   }
 }
