--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -76,3 +76,10 @@
     padding-top: 42px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .footer__welcome {
+    width: 1300px;
+    margin: 0 auto;
+  }
+}
