--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -74,6 +74,7 @@
 .example__cat--is {
   width: 42px;
   text-align: right;
+  margin-left: 122px;
 }
 
 .example__cat--was {
@@ -271,6 +272,7 @@
 
   .example__cat--is {
     width: 52px;
+    margin-left: 452px;
   }
 
   .example__cat--was {
