--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -43,11 +43,15 @@
 }
 
 .program-form__data--about-cat {
+  display: block;
   padding-top: 17px;
   padding-left: 30px;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .program-form__button {
+  border: none;
   height: 45px;
   padding-top: 13px;
   padding-bottom: 11px;
@@ -125,11 +129,6 @@
     max-width: 710px;
   }
 
-  .program-form__head--decoration {
-    position: relative;
-    padding-left: 44px;
-  }
-
   .program-form__head--decoration::before {
     content: " ";
     position: relative;
@@ -150,6 +149,7 @@
   .program-form__data--about-cat {
     padding-top: 60px;
     padding-left: 45px;
+    width: 630px;
   }
 
   .program-form__nb {
@@ -181,7 +181,6 @@
     margin-top: 62px;
     font-size: 36px;
     line-height: 36px;
-    width: 768px;
     margin-left: 0;
     padding-left: 0;
   }
@@ -199,6 +198,11 @@
     max-width: 720px;
     display: flex;
     margin-top: 40px;
+  }
+
+  .program-form__head--decoration {
+    position: relative;
+    padding-left: 44px;
   }
 }
 
@@ -228,9 +232,9 @@
   }
 
   .program-form__data--about-cat {
-    max-width: 1220px;
+    width: 1220px;
     margin: 0 auto;
-    margin-top: 37px;
+    margin-top: 20px;
     padding-top: 19px;
   }
 
