--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -1,7 +1,6 @@
 .welcome {
-  max-width: 280px;
-  margin: auto;
-  margin-top: 48px;
+  width: 280px;
+  margin-top: 43px;
   display: flex;
 }
 
@@ -26,11 +25,12 @@
 
 @media (min-width: @tablet-width) {
   .welcome {
-    margin-top: 32px;
-    max-width: 630px;
+    width: 630px;
     padding-top: 90px;
     justify-content: space-between;
     margin-bottom: 40px;
+    margin-top: 33px;
+    margin-left: 49px;
   }
 
   .welcome__partnership {
@@ -63,11 +63,10 @@
     background-color: @color-back--main;
     width: 410px;
     height: 201px;
-    margin: 0;
-    margin-left: 170px;
-    margin-top: 109px;
     z-index: 6;
     padding-top: 30px;
+    margin-top: 103px;
+    margin-left: 75px;
   }
 
   .welcome__address {
