--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -166,6 +166,7 @@
     height: 80px;
     background-color: @color-button;
     margin: initial;
+    margin-left: 0;
     margin-bottom: 30px;
     margin-top: 56px;
     background-position: 15px 15px;
