--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -1,16 +1,18 @@
 .cat-info {
-  display: flex;
-  flex-direction: column;
   border: none;
-  width: 280px;
-  margin: auto;
+  width: 100%;
   margin-top: 12px;
   padding: 0;
 }
 
 @media (min-width: @tablet-width) {
   .cat-info {
-    margin-left: 0;
     padding-left: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .cat-info {
+    margin-top: 40px;
   }
 }
