--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -9,6 +9,7 @@
 }
 
 .footer__image {
+  width: 130px;
   margin: auto;
   margin-bottom: 15px;
 
@@ -54,6 +55,10 @@
   z-index: 4;
 }
 
+.footer__welcome {
+  width: 100%;
+}
+
 @media (min-width: @tablet-width) {
   .footer__container {
     flex-direction: row;
@@ -61,6 +66,7 @@
   }
 
   .footer__image {
+    width: auto;
     margin: 0;
     margin-left: 0;
     margin-right: 20px;
@@ -74,12 +80,5 @@
   .footer__info {
     padding-bottom: 40px;
     padding-top: 42px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .footer__welcome {
-    width: 1300px;
-    margin: 0 auto;
   }
 }
