Подгоняем под ПП

--- a/source/less/blocks/cat-addition.less
+++ b/source/less/blocks/cat-addition.less
@@ -48,21 +48,21 @@
 
 @media (min-width: @tablet-width) {
   .cat-addition {
-    width: 780px;
-    padding-left: 0;
-    padding-top: 0;
+    width: 760px;
+    padding: 0;
+    margin-bottom: 50px;
   }
 
   .cat-addition__wrapper {
     flex-direction: row;
     flex-wrap: wrap;
-    padding-left: 73px;
+    width: 680px;
   }
 
   .cat-addition__item {
-    width: 260px;
+    width: 300px;
     margin-top: 20px;
-    margin-right: 85px;
+    margin-left: 45px;
   }
 
   .cat-addition__label::before {
