--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -6,6 +6,7 @@
   background-color: @color-back--text;
   padding: 0;
   padding-top: 5px;
+  padding-bottom: 10px;
 }
 
 .footer__image {
@@ -26,6 +27,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 285px;
 }
 
 .footer__go {
@@ -44,8 +46,9 @@
   position: relative;
   z-index: 1;
   border: none;
-  height: 400px;
+  height: 380px;
   width: 100%;
+  padding: 0;
 }
 
 .footer__iframe {
@@ -80,5 +83,11 @@
   .footer__info {
     padding-bottom: 40px;
     padding-top: 42px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .footer__map {
+    height: 400px;
   }
 }
