--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -119,7 +119,13 @@
 
 @media (min-width: @tablet-width) {
   .program-choice__item {
-    margin-top: 34px;
+    margin: 0 auto;
+    width: 710px;
+    padding-top: 33px;
+  }
+
+  .program-choice__item:nth-child(2) {
+    margin-top: 30px;
   }
 
   .program-choice__wrapper {
@@ -157,7 +163,7 @@
     font-size: 20px;
     padding-left: 53px;
     margin-top: 35px;
-    margin-bottom: 98px;
+    margin-bottom: 68px;
     background-position-x: 182px;
     background-position-y: 5px;
   }
@@ -208,8 +214,11 @@
   }
 
   .program-choice__item:first-child {
-    margin-bottom: 0;
-    margin-right: 91px;
+    margin-right: 71px;
+  }
+
+  .program-choice__item:nth-child(2) {
+    margin-top: 0;
   }
 
   .program-choice__item {
@@ -218,6 +227,7 @@
     margin-bottom: 20px;
     margin-top: 0;
     margin-left: 0;
+    padding-top: 29px;
   }
 
   .program-choice__wrapper {
