--- a/source/less/blocks/smm-list.less
+++ b/source/less/blocks/smm-list.less
@@ -4,7 +4,7 @@
   border-top: 1px solid @color-footer;
   border-bottom: 1px solid @color-footer;
   padding: 0;
-  padding-top: 20px;
+  padding-top: 15px;
   padding-bottom: 20px;
   padding-right: 12px;
   margin: 0;
@@ -17,18 +17,6 @@
 .smm-list__item:nth-child(2) {
   margin-left: 37px;
   margin-right: 37px;
-}
-
-.smm-list__icon {
-  transition: all 0.5s ease;
-
-  &:hover {
-    fill: @color-button;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
 }
 
 .smm-list__icon-vk {
@@ -44,6 +32,19 @@
 .smm-list__icon-fb {
   width: 10px;
   height: 19px;
+}
+
+.smm-list__icon {
+  fill: @color-html;
+  transition: all 0.5s ease;
+
+  &:hover {
+    fill: @color-button;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: @tablet-width) {
