--- a/source/less/variable.less
+++ b/source/less/variable.less
@@ -3,7 +3,7 @@
 @color-back--main:#ffffff;
 @color-back--opacity: rgba(255,255,255,0.3);
 @color-back--hvr: rgba(255,255,255,0.6);
-@color-back--catalog-opacity:rgba(205, 205, 205, 0);
+@color-back--catalog-opacity:rgba(192,190,191,0.5);
 @color-back--text: #f2f2f2;
 @color-back--catalog: #cdcdcd;
 @color-form--hover: #bababa;
