--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -1,16 +1,16 @@
 .container {
-  max-width: 280px;
+  width: 280px;
   margin: 0 auto;
 }
 
 @media (min-width: @tablet-width) {
   .container {
-    max-width: 720px;
+    width: 720px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .container {
-    max-width: 1220px;
+    width: 1220px;
   }
 }
