--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -50,12 +50,13 @@
     position: absolute;
     content: "";
     right: 0;
-    bottom: 100px;
+    bottom: 70px;
     width: 50%;
-    height: 700px;
+    height: 696px;
     background: url("../img/index-background-desktop@1x.jpg");
     background-color: @color-button;
     background-repeat: no-repeat;
+    background-size: cover;
     z-index: 0;
 
     @media (min-resolution: @retina-dppx), (min-resolution: @retina-dpi) {
