--- a/source/less/blocks/more-info.less
+++ b/source/less/blocks/more-info.less
@@ -60,6 +60,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 0;
+    background-color: @color-back--main;
+    border: 1px solid @color-back--catalog-opacity;
   }
 
   .more-info__show {
