--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -48,6 +48,8 @@
   padding-left: 30px;
   width: 280px;
   margin: 0 auto;
+  color: @color-font--arial;
+  border: 1px solid @color-back--catalog-opacity;
 }
 
 .program-form__button {
@@ -99,23 +101,25 @@
   margin: 0 auto;
 }
 
-.program-form__check {
-  border: 1px solid @color-back--catalog-opacity;
-  transition: all 0.2s ease;
-}
-
 .program-form__check:invalid {
-  border: 2px solid @color-form--error;
+  border: 1px solid @color-form--error;
+  box-shadow: inset 0 0 0 1px @color-form--error;
 }
 
 .program-form__check:hover {
   border: 1px solid @color-back--catalog;
+  box-shadow: none;
 }
 
 .program-form__check:active {
-  border: 2px solid @color-font--arial;
+  border: 1px solid @color-font--arial;
+  box-shadow: inset 0 0 0 1px @color-font--arial;
 }
 
+.program-form__check {
+  border: 1px solid @color-back--catalog-opacity;
+  transition: all 0.2s ease;
+}
 
 @media (min-width: @tablet-width) {
   .program-form__data {
@@ -198,11 +202,11 @@
     max-width: 720px;
     display: flex;
     margin-top: 40px;
+    margin-bottom: 75px;
   }
 
   .program-form__head--decoration {
     position: relative;
-    padding-left: 44px;
   }
 }
 
