Подгоняем под ПП

--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -43,6 +43,7 @@
 }
 
 .footer__map {
+  display: block;
   position: relative;
   z-index: 1;
   border: none;
@@ -89,5 +90,10 @@
 @media (min-width: @tablet-width) {
   .footer__map {
     height: 400px;
+  }
+
+  .footer__welcome {
+    width: 1300px;
+    margin: 0 auto;
   }
 }
