--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -67,7 +67,7 @@
   }
 
   .catalog__item:not(:last-child) {
-    background-image: linear-gradient(to top, @color-back--catalog-opacity, @color-back--catalog-opacity 80%, @color-back--main 20%, @color-back--main);
+    background-image: linear-gradient(to top, @color-back--text, @color-back--text 80%, @color-back--main 20%, @color-back--main);
   }
 
   .catalog__head {
