Работа над ошибками

--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -159,7 +159,6 @@
 .example__img {
   margin-top: 25px;
   position: relative;
-  right: 18px;
 }
 
 .example__point {
@@ -176,7 +175,7 @@
     font-size: 60px;
     line-height: 60px;
     font-weight: normal;
-    margin-top: 55px;
+    margin-top: 50px;
     padding-left: 5px;
     width: 700px;
   }
@@ -306,7 +305,7 @@
     text-align: right;
     right: 8px;
     top: 275px;
-    margin-top: 36px;
+    margin-top: 30px;
   }
 
   .example__wrapper {
@@ -331,13 +330,13 @@
   }
 
   .example__features {
-    margin-top: 73px;
+    margin-top: 67px;
   }
 
   .example__cost {
     width: 390px;
     position: static;
-    margin-top: 50px;
+    margin-top: 55px;
     text-align: left;
   }
 
@@ -363,6 +362,7 @@
 
   .example__bold {
     margin-top: 0;
+    padding-top: 5px;
   }
 
   .example__description-wrapper {
@@ -371,5 +371,13 @@
 
   .example__live {
     width: 570px;
+  }
+
+  .example__small {
+    margin-top: 12px;
+  }
+
+  .example__description {
+    margin-right: 35px;
   }
 }
