--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -18,7 +18,8 @@
 .html-academy__p {
   margin: 0;
   padding: 0;
-  padding-top: 12px;
+  padding-top: 13px;
+  padding-left: 10px;
 }
 
 .html-academy__icon {
@@ -38,6 +39,12 @@
 
   .html-academy__p {
     padding-top: 0;
-    margin-right: 20px;
+    margin-right: 18px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .html-academy__p {
+    margin-right: 13px;
   }
 }
