--- a/source/less/blocks/program-form.less
+++ b/source/less/blocks/program-form.less
@@ -1,6 +1,6 @@
 .program-form {
   border: none;
-  margin-top: 37px;
+  margin-top: 40px;
 }
 
 .program-form__head {
@@ -81,7 +81,7 @@
 
 .program-form__head--owner {
   margin-bottom: 10px;
-  margin-top: 21px;
+  margin-top: 10px;
   padding-left: 20px;
 }
 
@@ -91,7 +91,7 @@
 }
 
 .program-form__head--addition {
-  margin-top: 12px;
+  margin-top: 16px;
   margin-bottom: 15px;
   padding-left: 20px;
 }
@@ -99,6 +99,7 @@
 .program-form__container-nb {
   max-width: 280px;
   margin: 0 auto;
+  margin-bottom: 45px;
 }
 
 .program-form__check:invalid {
@@ -122,6 +123,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .program-form {
+    margin-top: 36px;
+  }
+
   .program-form__data {
     width: 631px;
     height: 174px;
@@ -202,7 +207,7 @@
     max-width: 720px;
     display: flex;
     margin-top: 40px;
-    margin-bottom: 75px;
+    margin-bottom: 70px;
   }
 
   .program-form__head--decoration {
@@ -213,6 +218,7 @@
 @media (min-width: @desktop-width) {
   .program-form {
     width: auto;
+    margin-top: 39px;
   }
 
   .program-form__button {
@@ -221,7 +227,7 @@
     padding-bottom: 11px;
     font-size: 20px;
     line-height: 20px;
-    width: 568px;
+    width: 572px;
     margin-left: 0;
   }
 
@@ -236,14 +242,18 @@
   }
 
   .program-form__data--about-cat {
-    width: 1220px;
+    width: 1195px;
+    height: 154px;
     margin: 0 auto;
     margin-top: 20px;
-    padding-top: 19px;
+    padding-top: 15px;
+    padding-left: 15px;
   }
 
   .program-form__nb {
+    margin-left: 80px;
     margin-right: 375px;
+    margin-top: 15px;
   }
 
   .program-form__head--decoration::before,
@@ -253,8 +263,8 @@
 
   .program-form__container-nb {
     max-width: 1220px;
-    margin-top: 50px;
-    margin-bottom: 90px;
+    margin-top: 62px;
+    margin-bottom: 80px;
   }
 
   .program-form__line-head {
@@ -262,7 +272,7 @@
     width: 100%;
     padding-bottom: 15px;
     padding-top: 15px;
-    margin-top: 34px;
+    margin-top: 30px;
     margin-bottom: 20px;
   }
 
@@ -272,7 +282,7 @@
     width: 100%;
     height: 3px;
     background-color: @color-button;
-    top: 50%;
+    top: 55%;
   }
 
   .program-form__head--decoration {
