--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -33,7 +33,7 @@
   .welcome {
     width: 768px;
     padding-top: 48px;
-    padding-bottom: 34px;
+    padding-bottom: 5px;
     padding-left: 0;
     padding-right: 0;
     margin-top: 0;
@@ -51,6 +51,7 @@
     text-align: left;
     line-height: 25px;
     margin-left: 0;
+    margin-bottom: 45px;
   }
 
   .welcome__address {
@@ -60,9 +61,8 @@
     font-size: 16px;
     line-height: 20px;
     text-align: right;
-    padding-top: 2px;
-    padding-right: 5px;
     margin-left: 175px;
+    margin-bottom: 45px;
   }
 
   .welcome__address-spb {
@@ -74,7 +74,7 @@
   .welcome {
     position: absolute;
     background-color: @color-back--main;
-    width: 480px;
+    width: 500px;
     height: 151px;
     z-index: 6;
     padding-top: 37px;
@@ -86,6 +86,8 @@
 
   .welcome__address {
     text-align: left;
-    margin-left: 95px;
+    margin-left: 97px;
+    padding-right: 65px;
+    padding-top: 3px;
   }
 }
