--- a/source/less/blocks/cat-addition.less
+++ b/source/less/blocks/cat-addition.less
@@ -9,6 +9,8 @@
 .cat-addition__wrapper {
   display: flex;
   flex-direction: column;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .cat-addition__item {
@@ -56,13 +58,13 @@
   .cat-addition__wrapper {
     flex-direction: row;
     flex-wrap: wrap;
-    width: 680px;
+    width: 720px;
   }
 
   .cat-addition__item {
-    width: 300px;
+    width: 298px;
     margin-top: 20px;
-    margin-left: 45px;
+    margin-left: 46px;
   }
 
   .cat-addition__label::before {
@@ -79,24 +81,26 @@
 
 @media (min-width: @desktop-width) {
   .cat-addition {
-    width: 1220px;
+    width: 1240px;
   }
 
   .cat-addition__item {
-    width: 250px;
+    width: 238px;
     padding-right: 0;
     margin-right: 0;
+    margin-left: 25px;
     margin-top: 10px;
   }
 
   .cat-addition__wrapper {
     padding-left: 0;
     justify-content: space-between;
+    width: 1240px;
   }
 
   .cat-addition__label::before {
-    right: 11px;
-    bottom: -10px;
-    margin-left: 22px;
+    right: 19px;
+    bottom: -12px;
+    margin-left: 0;
   }
 }
