--- a/source/less/blocks/cat-aspiration.less
+++ b/source/less/blocks/cat-aspiration.less
@@ -1,7 +1,7 @@
 .cat-aspiration {
   padding-top: 29px;
-  padding-bottom: 26px;
-  margin-top: 35px;
+  padding-left: 0;
+  margin-top: 5px;
   margin-bottom: 13px;
   border: 1px solid @color-back--catalog-opacity;
 }
