--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -104,6 +104,10 @@
 }
 
 @media (min-width: @desktop-width) {
+  .catalog {
+    margin-bottom: 35px;
+  }
+
   .catalog__item {
     width: 245px;
   }
