--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -27,7 +27,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 285px;
+  width: 300px;
+  margin: 0 auto;
 }
 
 .footer__go {
@@ -67,33 +68,43 @@
   .footer__container {
     flex-direction: row;
     justify-content: space-between;
+    width: 725px;
   }
 
   .footer__image {
     width: auto;
-    margin: 0;
     margin-left: 0;
-    margin-right: 20px;
+    margin-right: 28px;
+    padding-top: 14px;
+    padding-left: 5px;
   }
 
   .footer__map {
     width: 100%;
-    height: auto;
+    height: 400px;
   }
 
   .footer__info {
     padding-bottom: 40px;
-    padding-top: 42px;
+    padding-top: 40px;
   }
 }
 
-@media (min-width: @tablet-width) {
-  .footer__map {
-    height: 400px;
-  }
-
+@media (min-width: @desktop-width) {
   .footer__welcome {
     width: 1300px;
     margin: 0 auto;
+  }
+
+  .footer__image {
+    padding-left: 5px;
+  }
+
+  .footer__container {
+    width: 1230px;
+  }
+
+  .footer__info {
+    padding-top: 35px;
   }
 }
