--- a/source/less/blocks/program-choice.less
+++ b/source/less/blocks/program-choice.less
@@ -199,7 +199,7 @@
   }
 
   .program-choice__get {
-    margin-top: 15px;
+    margin-top: 8px;
     margin-left: 7px;
     padding-left: 48px;
     background-position-x: 175px;
@@ -207,7 +207,7 @@
 
   .program-choice__info {
     width: 470px;
-    height: 65px;
+    min-height: 65px;
     margin: 0;
     padding-top: 0;
     padding-left: 54px;
