--- a/source/less/blocks/works.less
+++ b/source/less/blocks/works.less
@@ -103,7 +103,7 @@
     justify-content: stretch;
     padding-bottom: 0;
     padding-top: 0;
-    margin-bottom: 147px;
+    margin-bottom: 75px;
   }
 
   .works__item--benefit::after {
@@ -182,14 +182,14 @@
 
   .works__info {
     width: 250px;
-    position: absolute;
+    position: relative;
     font-size: 16px;
     line-height: 24px;
     padding-left: 0;
     margin-top: 0;
     z-index: 4;
-    top: 170px;
     left: 6px;
+    min-height: 63px;
   }
 
   .works__info--last {
@@ -215,14 +215,14 @@
   }
 
   .works__item::after {
-    top: 0;
+    top: -28px;
   }
 
   .works__info {
     width: 250px;
     margin-top: 0;
-    top: 120px;
     left: 5px;
+    top: 0;
   }
 
   .works__head {
